# aivyx-pa

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  ROADMAP.md  docker-compose.yml  patch.py  patch_windows.sh  scratch.rs  scratch2.rs  test_regex.rs
.github/workflows/: ci.yml  release.yml
crates/aivyx-actions/: Cargo.toml
crates/aivyx-actions/src/: bridge.rs  calendar.rs  contacts.rs  documents.rs  email.rs  files.rs  finance.rs  knowledge.rs  lib.rs  monitor.rs  plugin.rs  reminders.rs  retry.rs  shell.rs  tasks.rs  triage_tools.rs  undo.rs  web.rs
crates/aivyx-actions/src/desktop/: clipboard.rs  mod.rs  notify.rs  open.rs  scanner.rs  windows.rs
crates/aivyx-actions/src/desktop/interaction/: atspi.rs  cdp.rs  dbus.rs  desktop_info.rs  documents.rs  fix_media.py  mod.rs  screen_ocr.rs  screenshot.rs  system_ctl.rs  tools.rs  win_desktop_info.rs  win_input.rs  win_media.rs  win_ocr.rs  win_screenshot.rs  win_system.rs  win_uia.rs  win_window.rs  window_manage.rs  ydotool.rs
crates/aivyx-actions/src/devtools/: ci.rs  git.rs  issues.rs  mod.rs  pr.rs
crates/aivyx-actions/src/messaging/: matrix.rs  mod.rs  patch_signal.sh  signal.rs  sms.rs  telegram.rs
crates/aivyx-actions/src/workflow/: library.rs  mod.rs
crates/aivyx-gui/: README.md  package-lock.json  package.json
crates/aivyx-gui/src/: app.html
crates/aivyx-gui/src/lib/pa/components/layout/: Sidebar.svelte  StatusBar.svelte  TopBar.svelte
crates/aivyx-gui/src/lib/shared/api/: client.ts  types.ts
crates/aivyx-gui/src/lib/shared/components/: AmbientBackground.svelte  Button.svelte  CandleLogo.svelte  GlassPanel.svelte  Input.svelte  StatCard.svelte  StatusBadge.svelte  VectorSeparator.svelte
crates/aivyx-gui/src/lib/shared/stores/: auth.ts  dashboard.ts  notifications.ts  theme.ts
crates/aivyx-gui/src/routes/: +layout.svelte  layout.css
crates/aivyx-gui/src/routes/(app)/: +layout.svelte  +page.svelte
crates/aivyx-gui/src/routes/(app)/activity/: +page.svelte
crates/aivyx-gui/src/routes/(app)/approvals/: +page.svelte
crates/aivyx-gui/src/routes/(app)/audit/: +page.svelte
crates/aivyx-gui/src/routes/(app)/chat/: +page.svelte
crates/aivyx-gui/src/routes/(app)/goals/: +page.svelte
crates/aivyx-gui/src/routes/(app)/memory/: +page.svelte
crates/aivyx-gui/src/routes/(app)/missions/: +page.svelte
crates/aivyx-gui/src/routes/(app)/settings/: +page.svelte
crates/aivyx-gui/src/routes/genesis/: +page.svelte
crates/aivyx-gui/src/routes/unlock/: +page.svelte
crates/aivyx-loop/: Cargo.toml
crates/aivyx-loop/src/: briefing.rs  heartbeat.rs  lib.rs  notify_dispatch.rs  pacing.rs  priority.rs  schedule.rs  sources.rs  triage.rs  trigger.rs
crates/aivyx-pa/: Cargo.toml
crates/aivyx-pa/src/: agent.rs  api.rs  config.rs  init.rs  lib.rs  main.rs  oauth.rs  passphrase.rs  persona_defaults.rs  pidfile.rs  profile.rs  runtime.rs  schedule_tools.rs  sessions.rs  settings.rs  tui.rs  webhook.rs
crates/aivyx-pa/src/profile/: launchd.rs  service_install.rs  systemd.rs  windows.rs
crates/aivyx-pa/tests/: agent_integration.rs
crates/aivyx-tui/: Cargo.toml
crates/aivyx-tui/src/: app.rs  main.rs  theme.rs
crates/aivyx-tui/src/views/: activity.rs  approvals.rs  audit.rs  chat.rs  genesis.rs  goals.rs  help.rs  home.rs  memory.rs  missions.rs  mod.rs  settings.rs
crates/aivyx-tui/src/widgets/: header.rs  mod.rs  sidebar.rs  status_bar.rs  telemetry.rs
docs/: architecture.md  configuration.md  development.md  manual.md  next-phase.md  tools.md
