[package]
name = "aivyx-loop"
description = "Proactive agent loop — briefings, monitoring, and autonomous actions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Foundation
aivyx-core.workspace       = true
aivyx-config.workspace     = true
aivyx-audit.workspace      = true
aivyx-capability.workspace = true
aivyx-llm.workspace        = true
aivyx-memory.workspace     = true
aivyx-brain.workspace      = true
aivyx-agent.workspace      = true

# Internal
aivyx-actions.workspace = true

# Runtime
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
chrono.workspace     = true
uuid.workspace       = true
tracing.workspace    = true
async-trait.workspace = true
anyhow.workspace     = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
