[package]
name = "aivyx-pa"
description = "Aivyx Personal Assistant — private, local-first AI that manages your life"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aivyx"
path = "src/main.rs"

[dependencies]
# Foundation
aivyx-core.workspace       = true
aivyx-crypto.workspace     = true
aivyx-config.workspace     = true
aivyx-audit.workspace      = true
aivyx-capability.workspace = true
aivyx-llm.workspace        = true
aivyx-mcp.workspace        = true
aivyx-memory.workspace     = true
aivyx-agent.workspace      = true
aivyx-brain.workspace      = true

# PA crates
aivyx-actions.workspace = true
aivyx-loop.workspace    = true

# CLI + TUI
clap.workspace    = true
ratatui.workspace = true
crossterm.workspace = true

# Runtime
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
chrono.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true
anyhow.workspace     = true
dirs.workspace       = true
toml.workspace       = true
secrecy.workspace    = true
tokio-util.workspace = true
