[package]
name = "aivyx-pa"
description = "Aivyx Personal Assistant — private, local-first AI that manages your life"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aivyx"
path = "src/main.rs"

[dependencies]
# Foundation
aivyx-core.workspace       = true
aivyx-crypto.workspace     = true
aivyx-config.workspace     = true
aivyx-audit.workspace      = true
aivyx-capability.workspace = true
aivyx-llm.workspace        = true
aivyx-mcp.workspace        = true
aivyx-memory.workspace     = true
aivyx-agent.workspace      = true
aivyx-brain.workspace      = true
aivyx-task-engine.workspace = true
aivyx-team.workspace       = true

# PA crates
aivyx-actions = { workspace = true, features = ["desktop-full"] }
aivyx-loop.workspace    = true

# CLI
clap.workspace    = true

# Runtime
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
chrono.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true
tracing-appender.workspace   = true
anyhow.workspace     = true
dirs.workspace       = true
toml.workspace       = true
secrecy.workspace    = true
tokio-util.workspace = true
zeroize.workspace    = true
rpassword.workspace  = true
uuid.workspace       = true
async-trait.workspace = true
axum.workspace       = true
tower.workspace      = true
tower-http.workspace = true
hmac.workspace       = true
sha2.workspace       = true
async-stream.workspace = true
futures-core.workspace = true
reqwest.workspace      = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
